--- a/WPF YouTube tutorial/WPF YouTube tutorial.csproj
+++ b/WPF YouTube tutorial/WPF YouTube tutorial.csproj
@@ -133,7 +133,7 @@
     <Resource Include="Resources\Fonts\OFL.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\670457.jpg" />
+    <Resource Include="Resources\Images\wp2732950.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
